# urv-mesiia-2025-tfm-code

./: .gitignore  Baseline.fll  CMakeLists.txt  CMakePresets.json  README.md  Trivial.fll  pm_solver.cpp  pm_solver.h  pm_solver_trivial.cpp  vcpkg.json
